Minor edits from Rachel

--- a/thesis/background-ml.tex
+++ b/thesis/background-ml.tex
@@ -180,7 +180,7 @@ Machine learning was once described to me by an anonymous supervisor as ``the st
             \item With many low-information features, decision trees have quite poor performance \citep{breiman01random-forest}.
         \end{itemize}
 
-        A \defn{decision tree ensemble} aims to reduce some of these limitations by training multiple, slightly different, independently-trained decision trees. Depending on the implementation each constituent decision tree may only have access to some of the features or some of the data. To predict, each tree produces a prediction and `votes' for this prediction; the votes are combined to produce the overall prediction (e.g. with majority voting). A simple example of such an ensemble is decision tree bagging \citep{breiman_bagging_1996}, which trains each tree with a random subset of the training data and takes a plurality vote. Decision tree ensembles decrease variance, increase the usability of low-information features, and increase stability of the trained model \citep{breiman01random-forest}. Averaging over the classifications produced by each tree gives a number that can be interpreted as a class probability estimate.
+        A \defn{decision tree ensemble} aims to reduce some of these limitations by training multiple, slightly different, independently trained decision trees. Depending on the implementation each constituent decision tree may only have access to some of the features or some of the data. To predict, each tree produces a prediction and `votes' for this prediction; the votes are combined to produce the overall prediction (e.g. with majority voting). A simple example of such an ensemble is decision tree bagging \citep{breiman_bagging_1996}, which trains each tree with a random subset of the training data and takes a plurality vote. Decision tree ensembles decrease variance, increase the usability of low-information features, and increase stability of the trained model \citep{breiman01random-forest}. Averaging over the classifications produced by each tree gives a number that can be interpreted as a class probability estimate.
 
         The most well-known description of decision tree ensembles is the \defn{random forest} \citep{breiman01random-forest}, which has found common use in astronomy partly to its readily available \texttt{Python} implementation in \texttt{scikit-learn} \citep{pedregosa11sklearn}. Splits are decided from a subset of features and training samples are randomly drawn with replacement from the total training set. One downside of random forests is the large number of hyperparameters that need to be set, and these vary a lot depending on the problem being addressed.
 
@@ -209,7 +209,7 @@ Machine learning was once described to me by an anonymous supervisor as ``the st
     \subsection{Where do labels come from?}
     \label{sec:sources-of-labels}
 
-        We previously said that labels were `expensive'. This is to be interpreted as expensive in either or both time and money: Labelling can be a slow, manual, and process. It is usually completed by hand, manually examining instances and determining which class they belong to (for classification) or what target they ought to be associated with (for regression). In astronomy this usually amounts to expert astronomers examining imagery at multiple wavelengths and making an educated guess as to what the true label is, but labelling may also involve follow-up observations (perhaps at higher resolution, greater sensitivity, or at a different wavelength).
+        We previously said that labels were `expensive'. This is to be interpreted as expensive in either or both time and money: Labelling can be a slow, manual, and costly process. It is usually completed by hand, manually examining instances and determining which class they belong to (for classification) or what target they ought to be associated with (for regression). In astronomy this usually amounts to expert astronomers examining imagery at multiple wavelengths and making an educated guess as to what the true label is, but labelling may also involve follow-up observations (perhaps at higher resolution, greater sensitivity, or at a different wavelength).
 
         An increasingly popular option for labelling large amounts of data is \defn{citizen science}: asking volunteers who are interested in contributing to science to label our data. Citizen science projects can be a fantastic opportunity for both science and outreach. For example, the ABC's `Stargazing Live' television programme engaged viewers and with their help found four exoplanets in just 48 hours \citep{miller_stargazing_2017} and labelled 120~000 SkyMapper images\footnote{Citizen scientists actually produced around 5 million labels---these were aggregated to 120~000 to reduce noise.} in just three days \citep{tucker_stargazing_2017}. The downside of citizen science is that non-expert labellers may be less accurate than experts, and indeed some may even be malicious and provide intentionally incorrect labels \citep{zhang_learning_2016}.
 
